--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "version": 2,
-  "public": true,
-  "buildCommand": null,
-  "outputDirectory": "public",
-  "cleanUrls": true,
-  "trailingSlash": false
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/public/$1" }
+  ]
 }
